samples/_failures_safe/1761533433_06f4ee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6d7a1cba.c: In function ‘bfs’:
./samples/SAFE/__tmp_6d7a1cba.c:160:12: error: expected expression at end of input
  160 |     struct GraphNode* start_node =
      |            ^~~~~~~~~
./samples/SAFE/__tmp_6d7a1cba.c:160:12: error: expected declaration or statement at end of input
